fixed 404 page width on mobile devices

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -251,6 +251,10 @@ p {
     .list {
         width: inherit;
     }
+    
+    iframe {
+        width: inherit;
+    }
 }
 
 @media (max-width: 768px) {
